# MoonlightController

./: .gitignore  CMakeLists.txt  CMakePresets.json  DOCUMENTATION.md  README.md  libmoonlightcontroller.sln
MoonlightController/: CMakeLists.txt
MoonlightController/include/: Position2D.hpp  Vector2D.hpp
MoonlightController/include/Controllers/Keyboard/: IKeyboardController.hpp  KeyboardControllers.hpp
MoonlightController/include/Controllers/Mouse/: EMouseButton.hpp  IMouseController.hpp  MouseControllers.hpp
MoonlightController/include/Controllers/XInput/: EXInputAxis.hpp  EXInputBatteryDeviceType.hpp  EXInputBatteryLevel.hpp  EXInputBatteryType.hpp  EXInputButtons.hpp  EXInputDeviceFeatures.hpp  EXInputDeviceSubType.hpp  EXInputDeviceType.hpp  EXInputKeyboardStates.hpp  EXInputVirtualKey.hpp  IXInputController.hpp  XInputBatteryInformation.hpp  XInputCapabilities.hpp  XInputControllers.hpp  XInputKeystroke.hpp
MoonlightController/include/Exportables/: Exportable.hxx
MoonlightController/include/Scripting/Lua/: ELuaModuleLibraries.hpp  LuaModule.hpp
MoonlightController/src/Controllers/XInput/: XInputBatteryInformation.cpp  XInputCapabilities.cpp  XInputKeystroke.cpp
MoonlightController/src/Scripting/Lua/: LuaModule.cpp
MoonlightControllerCLI/: CMakeLists.txt
MoonlightControllerCLI/include/: Command.hpp  Commands.hpp
MoonlightControllerCLI/src/: Command.cpp  Commands.cpp  main.cpp
examples/: TLoA.lua  slippymouse.lua  xinputmouse.lua
libmoonlightcontroller/: Definitions.h  ELuaModuleLibraries.h  ELuaModuleLibrary.h  EMouseButton.h  EXInputAxis.h  EXInputBatteryDeviceType.h  EXInputBatteryLevel.h  EXInputBatteryType.h  EXInputButton.h  EXInputButtons.h  EXInputDeviceFeatures.h  EXInputDeviceSubType.h  EXInputDeviceSubtype.h  EXInputDeviceType.h  EXInputKeyboardStates.h  EXInputVirtualKey.h  EventSystem.cpp  EventSystem.h  KeyboardController.cpp  KeyboardController.h  LuaModule.cpp  LuaModule.h  MouseController.cpp  MouseController.h  Platform.h  Position.cpp  Position.h  XInputBatteryInformation.cpp  XInputBatteryInformation.h  XInputCapabilities.cpp  XInputCapabilities.h  XInputController.cpp  XInputController.h  XInputKeystroke.cpp  XInputKeystroke.h  libmoonlightcontroller.vcxproj  libmoonlightcontroller.vcxproj.filters  moonlightcontroller.h  platform.h
libmoonlightcontroller/Linux/: EUserInputOutputType.h  UserInputOutput.cpp  UserInputOutput.h
moonlightcontroller/: FunctionData.h  main.cpp  moonlightcontroller.vcxproj  moonlightcontroller.vcxproj.filters
